# sot-torque-control

./: CMakeLists.txt
include/sot/torque_control/: tsid-controller.hh
src/: CMakeLists.txt  tsid-controller.cpp
unitTesting/: CMakeLists.txt  test_tsid_controller.cpp  unit_test_tsid_controller_quadruped.py
unitTesting/models/quadruped/urdf/: quadruped.urdf
